# py2ren

./: .gitignore  CHANGELOG.md  README.md  pyproject.toml  requirements.txt
docs/: index.html
docs/1.0/: .buildinfo  changelog.html  configuration.html  genindex.html  index.html  objects.inv  py-modindex.html  quickstart.html  search.html  searchindex.js  versions-docs.html
docs/1.0/.doctrees/: changelog.doctree  configuration.doctree  environment.pickle  index.doctree  quickstart.doctree  versions-docs.doctree
docs/1.0/_sources/: configuration.rst.txt  quickstart.rst.txt  versions-docs.rst.txt
docs/1.0/modules/: cli.html  config.html  helpers.html
docs/1.1.0/: .buildinfo  changelog.html  configuration.html  genindex.html  index.html  objects.inv  py-modindex.html  quickstart.html  search.html  searchindex.js  versions-docs.html
docs/1.1.0/.doctrees/: changelog.doctree  configuration.doctree  environment.pickle  index.doctree  quickstart.doctree  versions-docs.doctree
docs/1.1.0/_sources/: index.rst.txt  versions-docs.rst.txt
docs/source/: conf.py  quickstart.rst
py2ren/: cli.py  cli.pyi  helpers.py  helpers.pyi
py2ren/config/: config.py  config.pyi  exceptions.py
py2ren/converter/: bases.pyi  imports.py  imports.pyi  syntax.py  syntax.pyi
py2ren/utils/: __init__.py  __init__.pyi  filepath.py
src/: __init__.py  __main__.py  cli.py
src/config/: __init__.py  config.py
src/converter/: bases.py  syntax.py
src/py2ren/: __init__.py  cli.py  cli.pyi  helpers.pyi
src/utils/: __init__.py  filepath.py
tests/: cli.py  py2ren.config.json
(+78 files in other folders)
